[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
blake3 = "1.5.3"
bytes = "1.7.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "0.17.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
serde_with = "3.9.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
dashmap = "6.0.1"
derive_builder = "0.20.0"
derive_more = "0.99.18"
futures = "0.3.30"
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.39.2", features = ["fs", "rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
